[FTR] Add API over minio

--- a/spomen/.env.example
+++ b/spomen/.env.example
@@ -7,6 +7,7 @@ MINIO_ROOT_PASSWORD=change-this-secret-key
 # Ports
 MINIO_API_PORT=9000
 MINIO_CONSOLE_PORT=9001
+SPOMEN_API_PORT=8081
 
 # Data directory (absolute path recommended for production)
 MINIO_DATA_DIR=./data
