--- a/spomen/docker-compose.yml
+++ b/spomen/docker-compose.yml
@@ -1,5 +1,3 @@
-version: '3.8'
-
 services:
   minio:
     image: minio/minio:latest
@@ -19,6 +17,27 @@ services:
       interval: 30s
       timeout: 20s
       retries: 3
+    restart: unless-stopped
+    networks:
+      - spomen-network
+
+  # Spomen API server
+  spomen-api:
+    build:
+      context: .
+      dockerfile: Dockerfile
+    container_name: spomen-api
+    ports:
+      - "${SPOMEN_API_PORT:-8081}:8081"
+    environment:
+      SPOMEN_PORT: "8081"
+      MINIO_ENDPOINT: minio:9000
+      MINIO_ROOT_USER: ${MINIO_ROOT_USER:-spomen-admin}
+      MINIO_ROOT_PASSWORD: ${MINIO_ROOT_PASSWORD:-spomen-secret-key}
+      MINIO_USE_SSL: "false"
+    depends_on:
+      minio:
+        condition: service_healthy
     restart: unless-stopped
     networks:
       - spomen-network
