[FTR] Setup frontend

--- a/backend-dashboard/.env.example
+++ b/backend-dashboard/.env.example
@@ -33,3 +33,16 @@ SPOMEN_URL=http://localhost:8081
 IMPULS_API_KEY=
 IZVOR_API_KEY=
 SPOMEN_API_KEY=
+
+# JWT Settings
+JWT_EXPIRES_IN=7d
+
+# Email / SMTP Settings (for password reset)
+EMAIL_PROVIDER=nodemailer
+SMTP_HOST=localhost
+SMTP_PORT=587
+SMTP_USERNAME=
+SMTP_PASSWORD=
+SMTP_SECURE=false
+EMAIL_FROM=noreply@oblak.local
+EMAIL_REPLY_TO=support@oblak.local
